[gd_scene load_steps=2 format=1]

[ext_resource path="res://files/scripts/imageselect.gd" type="Script" id=1]

[node name="Panel" type="WindowDialog"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 512.5
margin/top = 353.5
margin/right = -371.5
margin/bottom = -144.5
popup/exclusive = false
window/title = ""
script/script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 33.0
margin/top = 8.0
margin/right = 693.0
margin/bottom = 408.0
scroll/horizontal = false
scroll/vertical = true

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 120.0
custom_constants/vseparation = 15
custom_constants/hseparation = 5
columns = 6

[node name="Button" type="TextureButton" parent="ScrollContainer/GridContainer"]

rect/min_size = Vector2( 100, 120 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 120.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/Button"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 100.0
margin/right = 101.0
margin/bottom = 137.0
text = "nagdsagashfhahhmejgpg"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pic" type="TextureFrame" parent="ScrollContainer/GridContainer/Button"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 100.0
expand = true
stretch_mode = 6

[node name="cancelportait" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 329.0
margin/top = 439.0
margin/right = 543.0
margin/bottom = 473.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[node name="racelock" type="CheckBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 701.0
margin/top = 20.0
margin/right = 865.0
margin/bottom = 47.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Race Locked"
flat = false
align = 0

[node name="search" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 705.0
margin/top = 55.0
margin/right = 864.0
margin/bottom = 83.0
placeholder/text = "Search"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="noimagestext" type="RichTextLabel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 33.0
margin/right = 674.0
margin/bottom = 172.0
bbcode/enabled = true
bbcode/bbcode = "[center]You have no images with fitting criterias available.[/center]
[center]Put your images into portrait folder and hit 'Reload Portraits' button[/center]"
visible_characters = -1

[node name="addcustom" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 706.0
margin/top = 101.0
margin/right = 863.0
margin/bottom = 135.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Add custom image"
flat = false

[node name="openfolder" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 706.0
margin/top = 149.0
margin/right = 863.0
margin/bottom = 183.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Open portrait folder"
flat = false

[node name="reloadlist" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 706.0
margin/top = 195.0
margin/right = 863.0
margin/bottom = 229.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reload portraits"
flat = false

[node name="removeportrait" type="Button" parent="."]

hint/tooltip = "Disables portait for this character"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 706.0
margin/top = 240.0
margin/right = 863.0
margin/bottom = 274.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Remove portrait"
flat = false

[node name="reverseportrait" type="Button" parent="."]

hint/tooltip = "Restore default character's portrait (if existed)"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 706.0
margin/top = 286.0
margin/right = 863.0
margin/bottom = 320.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reverse to default"
flat = false

[node name="FileDialog" type="FileDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -39.0
margin/top = -4.0
margin/right = 613.0
margin/bottom = 401.0
popup/exclusive = false
window/title = "Open a File"
dialog/text = "Select New Portait"
dialog/hide_on_ok = true
mode = 0
access = 2
filters = StringArray( "*.jpg", "*.png" )
show_hidden_files = false

[connection signal="pressed" from="cancelportait" to="." method="_on_cancelportait_pressed"]

[connection signal="pressed" from="racelock" to="." method="_on_racelock_pressed"]

[connection signal="text_changed" from="search" to="." method="_on_search_text_changed"]

[connection signal="pressed" from="addcustom" to="." method="_on_addcustom_pressed"]

[connection signal="pressed" from="openfolder" to="." method="_on_openfolder_pressed"]

[connection signal="pressed" from="reloadlist" to="." method="_on_reloadlist_pressed"]

[connection signal="pressed" from="removeportrait" to="." method="_on_removeportrait_pressed"]

[connection signal="pressed" from="reverseportrait" to="." method="_on_reverseportrait_pressed"]

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]


